# epjson_validator

./: Prompt.md  README.md  pyproject.toml
scripts/: validate-dataset.ps1
src/epjson_validator/: __init__.py  cli.py  config.py  diagnostics.py  loader.py  models.py  parametric.py  registry.py  types.py
src/epjson_validator/geometry/: __init__.py  extractor.py  math_utils.py  models.py  normalize.py  rule_builder.py  rules.py  validator.py
src/epjson_validator/hvac/: __init__.py  extractor.py  models.py  renderer.py
src/epjson_validator/pipeline/: __init__.py  validate.py
src/epjson_validator/reference/: __init__.py  index_builder.py  models.py  validator.py
src/epjson_validator/schema/: __init__.py  base.py  introspection.py  loader.py  raw_loader.py  validator.py
src/epjson_validator/schema/converter/: __init__.py  convert.py  enrich.py  raw_loader.py
src/epjson_validator/schema/providers/: __init__.py  v24_2_0.py
src/epjson_validator/visualization/: __init__.py  profiles.py  validator.py
tests/: test_hvac_graph.py  test_schema_converter.py  test_validator.py
