[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epjson_validator"
version = "0.1.0"
description = "CLI and library for validating EnergyPlus epJSON files."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "OpenAI Codex"}]
dependencies = ["typer>=0.12,<1.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
epjson-validator = "epjson_validator.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
